--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -27,7 +27,7 @@
     <title>BDS - Equipes</title>
     <meta name="description" content="">
 
-    <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
+    <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 
@@ -81,6 +81,7 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/inscription.html">Evènements</a></li>
                     </ul>
                 </nav>
             </div>
