--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -26,7 +26,7 @@
     <title>BDS - Promotions</title>
     <meta name="description" content="">
 
-    <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
+    <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 
@@ -70,6 +70,7 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/inscription.html">Evènements</a></li>
                     </ul>
                 </nav>
             </div>
