--- a/inscription.html
+++ b/inscription.html
@@ -9,24 +9,24 @@
     <script src="./table/dataTables.responsive.js"></script>
     <link href="./table/dataTables.responsive.css" rel="stylesheet" />
     <link href="./table/jquery.dataTables.css" rel="stylesheet" />
-    <link href="./table/jquery-ui.js" rel="stylesheet" />
+    <link href="./table/jquery-ui.js" />
     <link href="./css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="shortcut icon" href="./img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Etudiants</title>
+    <title>BDS - Evènements</title>
     <meta name="description" content="">
 
-    <meta name="author" content="Stéfan CORLAY">
+    <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 
@@ -36,19 +36,10 @@
     <meta name="og:image" content="">
     <meta name="og:image:width" content="">
     <meta name="og:image:height" content="">
+
 </head>
 
 <body>
-    <script type="text/javascript" charset="utf-8">
-        $(document).ready(function () {
-            $('#example').DataTable({
-                responsive: true,
-                pagingType: "simple",
-                pageLength: 10
-            })
-        });
-    </script>
-
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
@@ -67,18 +58,21 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements
+                                            des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/promotion.html">Classements
+                                            des
                                             promotions</a>
                                     </li>
                                 </ul>
                             </div>
+                      
                         </li>
-                        <li><a class="nav-link" href="#top">Etudiants</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/inscription.html">Evènements</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="#top">Evènements</a></li>
                     </ul>
                 </nav>
             </div>
@@ -96,28 +90,34 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <h1>Liste des étudiants inscrit dans une équipe :</h1>
-        <br><br>
-        <br><br>
-        <table id="example" class="display" cellspacing="0" width="100%">
-            <thead>
-                <tr>
-                    <th>Prénom - Nom</th>
-                    <th>Equipe</th>
-                    <th>Promotion</th>
-                    <th>Age</th>
-                </tr>
-            </thead>
+        <div class="containers">
+            <div class="titles">
+                <h3>S'inscrire pour le prochain évènement</h3>
+            </div>
+            <form action="https://formsubmit.co/eaf3e07df943384d3a5bd24b497ec958" method="POST"
+                onsubmit="sendEmail(); reset(); return false;">
+                <input type="text" name="_honey" style="display: none;">
 
-            <tbody>
-                <tr>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
-                </tr>
-            </tbody>
-        </table>
+                <input type="hidden" name="_captcha" value="false">
+
+                <input type="hidden" name="_next" value="success.html">
+
+                <input id="name" type="text" name="Nom" placeholder="Prénom - nom du capitaine" required="">
+                <input id="email" type="email" name="Email" placeholder="Votre email" required="">
+                <input id="number" type="text" name="Numéro&nbsp;de&nbsp;téléphone"
+                    placeholder="Votre numéro de téléphone" required="">
+                <input id="subject" type="text" name="Nom&nbsp;de&nbsp;votre&nbsp;équipe" placeholder="Nom d'équipe"
+                    required="">
+                <!--<textarea id="message" name="message" placeholder="Entrez votre message" required=""></textarea>-->
+                <button type="submit">Envoyer</button>
+
+                <!--AJOUTER NOMS DES JOUEURS-->
+                <h6>Note: Si votre équipe est déjà inscrite auprès du BDS merci de ne pas renseigner le nom de chaque
+                    joueur mais uniquement le nom de l'équipe ! (Vous pouvez vérifier cela via le <a class="forma"
+                        style="color: #292c2f;" href="/bdsiutsn/classements/equipes.html">Classement des équipes</a>)
+                </h6>
+            </form>
+        </div>
     </main>
 
     <footer class="footer-distributed">
@@ -125,14 +125,33 @@
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
             <a href="/bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
+            </a>
         </div>
 
         <div class="footer-left">
             <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire créé par Stéfan CORLAY</p>
         </div>
 
-
     </footer>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail() {
+            Email.send({
+                SecureToken: '863ba848-ea9c-4018-9051-f07bb03ac6e6',
+                Host: 'smtp.elasticemail.com',
+                To: 'bds.iutsn.contact@gmail.com',
+                From: document.getElementById('email').value,
+                Subject: "Nouveau message venant du site web",
+                Body: "Nom: " + document.getElementById("name").value
+                    + "<br> Sujet: " + document.getElementById("subject").value
+                    + "<br> Email: " + document.getElementById("email").value
+                    + "<br> Téléphone: " + document.getElementById('number').value
+                    + "<br> Message: " + document.getElementById('message').value
+            }).then(
+                message => alert("Message envoyé avec succès.")
+            );
+        }
+    </script>
 </body>
 
 </html>
