--- a/inscription.html
+++ b/inscription.html
@@ -100,7 +100,7 @@
 
                 <input type="hidden" name="_captcha" value="false">
 
-                <input type="hidden" name="_next" value="success.html">
+                <input type="hidden" name="_next" value="/bdsiutsn/success.html">
 
                 <input id="name" type="text" name="Nom" placeholder="Prénom - nom du capitaine" required="">
                 <input id="email" type="email" name="Email" placeholder="Votre email" required="">
