--- a/success.html
+++ b/success.html
@@ -91,10 +91,9 @@
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
         <div class="containers">
             <div class="title"></div>
-            <h3>Merci pour votre inscription ! Elle a bien été prise en compte !</h3>
-
+            <h3 class="zdpjvzelk">Merci pour votre inscription ! Elle a bien été prise en compte !</h3>
             <br></br>
-            <h2>Nous vous renverrons un message de confirmation concernant votre inscription !</h2>
+            <h2 class="zdpjvzelk">Nous vous renverrons un message de confirmation concernant votre inscription !</h2>
         </div>
         </div>
     </main>
