--- a/inscription.html
+++ b/inscription.html
@@ -100,7 +100,7 @@
 
                 <input type="hidden" name="_captcha" value="false">
 
-                <input type="hidden" name="_next" value="/bdsiutsn/success.html">
+                <input type="hidden" name="_next" value="https://scorlay.github.io/bdsiutsn/success.html">
 
                 <input id="name" type="text" name="Nom" placeholder="Prénom - nom du capitaine" required="">
                 <input id="email" type="email" name="Email" placeholder="Votre email" required="">
@@ -133,25 +133,6 @@
         </div>
 
     </footer>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script>
-        function sendEmail() {
-            Email.send({
-                SecureToken: '863ba848-ea9c-4018-9051-f07bb03ac6e6',
-                Host: 'smtp.elasticemail.com',
-                To: 'bds.iutsn.contact@gmail.com',
-                From: document.getElementById('email').value,
-                Subject: "Nouveau message venant du site web",
-                Body: "Nom: " + document.getElementById("name").value
-                    + "<br> Sujet: " + document.getElementById("subject").value
-                    + "<br> Email: " + document.getElementById("email").value
-                    + "<br> Téléphone: " + document.getElementById('number').value
-                    + "<br> Message: " + document.getElementById('message').value
-            }).then(
-                message => alert("Message envoyé avec succès.")
-            );
-        }
-    </script>
 </body>
 
 </html>
