--- a/inscription.html
+++ b/inscription.html
@@ -102,7 +102,9 @@
 
                 <input type="hidden" name="_next" value="https://scorlay.github.io/bdsiutsn/success.html">
 
-                <input id="name" type="text" name="Nom" placeholder="Prénom - nom du capitaine" required="">
+                <input type="hidden" name="_autoresponse" value="Bonjour, nous vous confirmons la demande de participation au prochain évènement.">
+
+                <input id="name" type="text" name="Capitaine" placeholder="Prénom - nom du capitaine" required="">
                 <input id="email" type="email" name="Email" placeholder="Votre email" required="">
                 <input id="number" type="text" name="Numéro&nbsp;de&nbsp;téléphone"
                     placeholder="Votre numéro de téléphone" required="">
