--- a/inscription.html
+++ b/inscription.html
@@ -116,7 +116,7 @@
                 <!--AJOUTER NOMS DES JOUEURS-->
                 <h6>Note: Si votre équipe est déjà inscrite auprès du BDS merci de ne pas renseigner le nom de chaque
                     joueur mais uniquement le nom de l'équipe ! (Vous pouvez vérifier cela via le <a class="forma"
-                        style="color: #292c2f;" href="/bdsiutsn/classements/equipes.html">Classement des équipes</a>)
+                        style="color: #292c2f;" href="/bdsiutsn/classements/equipes.html" target="_blank">Classement des équipes</a>)
                 </h6>
             </form>
         </div>
