--- a/success.html
+++ b/success.html
@@ -94,6 +94,8 @@
             <h3 class="zdpjvzelk">Merci pour votre inscription !</h3>
             <br></br>
             <h2 class="zdpjvzelk">Nous vous renverrons un message de confirmation concernant votre inscription !</h2>
+            <br></br>
+            <p><a href="/bdsiutsn/index.html" style="color: #292c2f; ">Retour à l'Accueil</a></p>
         </div>
         </div>
     </main>
