--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -98,7 +98,7 @@
         </div>
 
         <div class="footer-left">
-            <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire créé par Stéfan CORLAY</p>
+            <p>Site du Bureau des Sports de l'IUT de Saint-Nazaire développé par Stéfan CORLAY</p>
         </div>
 
 
