--- a/inscription.html
+++ b/inscription.html
@@ -112,8 +112,8 @@
                     placeholder="Votre numéro de téléphone" required="">
                 <input id="subject" type="text" name="Nom&nbsp;de&nbsp;votre&nbsp;équipe" placeholder="Nom d'équipe"
                     required="">
-                <textarea name="Joueurs" placeholder="Indiquez le nom de tous les étudiants participants au tournoi (Minimum 5, maximum 10)" required=""></textarea>
-                <!--<textarea id="message" name="message" placeholder="Entrez votre message" required=""></textarea>-->
+                <textarea name="Participants"
+                    placeholder="Indiquez les noms de tous les étudiants participant au tournoi (Minimum 5, maximum 10)"></textarea>
                 <button type="submit">Envoyer</button>
                 <h6>Note: Si votre équipe est déjà inscrite auprès du BDS merci de ne pas renseigner le nom de
                     chaque
