--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -13,7 +13,7 @@
     <link href="../css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,7 +60,8 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements des
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/equipes.html">Classements
+                                            des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
@@ -76,6 +77,8 @@
                 </nav>
             </div>
 
+
+
             <div class="nav-end">
                 <button id="hamburger" aria-label="hamburger" aria-haspopup="true" aria-expanded="false">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -89,6 +92,7 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
+        <h1><a href="/bdsiutsn/index.html" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
     <footer class="footer-distributed">
