--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
 
 </head>
 
+<!--<div class="spacer" data-height="1000"></div>-->
+
 <body>
-    
+
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
@@ -50,6 +52,22 @@
                 <nav class="menu">
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="#top">Accueil</a></li>
+                        <li>
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover">
+                                Evènements
+                            </button>
+                            <div id="dropdown1" class="dropdown">
+                                <ul role="menu">
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/actus.html">Evènements à venir</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/inscription.html">S'inscrire aux évènements</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
@@ -72,7 +90,6 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/inscription.html">Evènements</a></li>
                     </ul>
                 </nav>
             </div>
@@ -95,6 +112,18 @@
 
         <br></br>
 
+        <div class="presentation">
+            <h2>Présentation</h2>
+            <h3> Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
+                comme
+                l'événement d'intégration de début d'année. L'association favorise la cohésion d'équipe et l'esprit de
+                groupe. Des valeurs qui s’appliquent aussi bien dans le cadre de la
+                compétition que dans sa vie professionnelle.
+            </h3>
+        </div>
+        
+        <br></br>
+
         <div class="missions">
             <h2>Missions</h2>
             <li style="text-indent: 25px;">
@@ -112,20 +141,6 @@
             </li>
         </div>
 
-        <br></br>
-
-        <div class="presentation">
-            <h2>Présentation</h2>
-            <h3> Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
-                comme
-                l'événement d'intégration de début d'année. L'association favorise la cohésion d'équipe et l'esprit de
-                groupe. Des valeurs qui s’appliquent aussi bien dans le cadre de la
-                compétition que dans sa vie professionnelle.
-            </h3>
-        </div>
-
-        <br></br>
-        <br></br>
 
         <!--<div class="instagram-widget">
             <div class="instagram-widget1">
@@ -326,6 +341,7 @@
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
             <a href="/bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
+
         </div>
 
         <div class="footer-left">
