--- a/success.html
+++ b/success.html
@@ -51,6 +51,22 @@
                     <ul class="menu-bar">
                         <li><a class="nav-link" href="/bdsiutsn/index.html">Accueil</a></li>
                         <li>
+                            <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
+                                aria-expanded="false" aria-label="discover">
+                                Evènements
+                            </button>
+                            <div id="dropdown1" class="dropdown">
+                                <ul role="menu">
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/actus.html">Evènements à venir</a>
+                                    </li>
+                                    <li role="menuitem">
+                                        <a class="dropdown-link" href="/bdsiutsn/classements/inscription.html">S'inscrire aux évènements</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown2" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
                                 Classements
@@ -72,7 +88,6 @@
                             </div>
                         </li>
                         <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
-                        <li><a class="nav-link" href="/bdsiutsn/inscription.html">Evènements</a></li>
                     </ul>
                 </nav>
             </div>
