--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -2,28 +2,28 @@
 <html lang="fr">
 
 <head>
-    <script src="./table/jquery-1.9.1.js"></script>
-    <script src="./table/jquery-ui.js"></script>
-    <script src="./app.js" defer></script>
-    <script src="./table/jquery.dataTables.min.js"></script>
-    <script src="./table/dataTables.responsive.js"></script>
-    <link href="./table/dataTables.responsive.css" rel="stylesheet" />
-    <link href="./table/jquery.dataTables.css" rel="stylesheet" />
-    <link href="./table/jquery-ui.js" />
-    <link href="./css/footer.css" rel="stylesheet" />
+    <script src="../table/jquery-1.9.1.js"></script>
+    <script src="../table/jquery-ui.js"></script>
+    <script src="../app.js" defer></script>
+    <script src="../table/jquery.dataTables.min.js"></script>
+    <script src="../table/dataTables.responsive.js"></script>
+    <link href="../table/dataTables.responsive.css" rel="stylesheet" />
+    <link href="../table/jquery.dataTables.css" rel="stylesheet" />
+    <link href="../table/jquery-ui.js" />
+    <link href="../css/footer.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="shortcut icon" href="./img/bds-logo-shark.png">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/bds-logo-shark.png">
 
     <meta name="fragment" content="!">
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Evènements</title>
+    <title>BDS - Inscription</title>
     <meta name="description" content="">
 
     <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
@@ -44,7 +44,7 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
-                <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
+                <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
