--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -44,7 +44,7 @@
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
-                <img src="./img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
+                <img src="../img/bds-logo-shark.png" width="60" height="60" alt="Inc Logo" />
             </a>
             <div class="nav-start">
                 <nav class="menu">
@@ -106,40 +106,7 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <div class="containers">
-            <div class="titles">
-                <h3>S'inscrire pour le prochain évènement</h3>
-            </div>
-            <form action="https://formsubmit.co/eaf3e07df943384d3a5bd24b497ec958" method="POST"
-                onsubmit="sendEmail(); reset(); return false;" id="wrapper">
-                <input type="text" name="_honey" style="display: none;">
-
-                <input type="hidden" name="_captcha" value="false">
-
-                <input type="hidden" name="_next" value="https://scorlay.github.io/bdsiutsn/success.html">
-
-                <input type="hidden" name="_autoresponse"
-                    value="Bonjour, nous vous confirmons la demande de participation au prochain évènement.">
-
-                <input id="name" type="text" name="Capitaine" placeholder="Prénom - nom du capitaine" required="">
-                <input id="email" type="email" name="Email" placeholder="Votre email" required="">
-                <input id="number" type="text" name="Numéro&nbsp;de&nbsp;téléphone"
-                    placeholder="Votre numéro de téléphone" required="">
-                <input id="subject" type="text" name="Nom&nbsp;de&nbsp;votre&nbsp;équipe" placeholder="Nom d'équipe"
-                    required="">
-                <textarea name="Participants"
-                    placeholder="Indiquez les noms de tous les étudiants participant au tournoi (Minimum 5, maximum 10)"></textarea>
-                <button type="submit">Envoyer</button>
-                <h6>Note: Si votre équipe est déjà inscrite auprès du BDS merci de ne pas renseigner le nom de
-                    chaque
-                    joueur mais uniquement le nom de l'équipe ! (Vous pouvez vérifier cela via le <a class="forma"
-                        style="color: #292c2f;" href="/bdsiutsn/classements/equipes.html" target="_blank">Classement
-                        des
-                        équipes</a>)
-                </h6>
-        </div>
-        </form>
-        </div>
+        
     </main>
 
     <footer class="footer-distributed">
