--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -105,8 +105,8 @@
         </div>
     </header>
 
-    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        
+    <main style="padding: 1.5rem; margin: 0 auto; max-width: 1300px">
+        <h1><a href="/bdsiutsn/index.html" style="color: #292c2f;">Retour à l'Accueil</a></h1>
     </main>
 
     <footer class="footer-distributed">
