--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
     <meta http-equiv="content-language" content="fr">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    <title>BDS - Evènements</title>
+    <title>BDS - Accueil</title>
     <meta name="description" content="">
 
-    <meta name="author" content="Bureau des Sports IUT Saint-Nazaire">
+    <meta name="author" content="Stéfan CORLAY">
     <meta name="country" content="France">
     <meta name="geo.country" content="FR">
 
@@ -39,8 +39,10 @@
 
 </head>
 
+<!--<div class="spacer" data-height="1000"></div>-->
 
 <body>
+
     <header id="nav-menu" aria-label="navigation bar">
         <div class="container">
             <a class="logo" href="/bdsiutsn/index.html">
@@ -58,10 +60,12 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à venir</a>
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à
+                                            venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire aux évènements</a>
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire
+                                            aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
@@ -87,7 +91,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
+                        <li><a class="nav-link" href="#top">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -105,15 +109,49 @@
     </header>
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
-        <div class="containers">
-            <div class="title"></div>
-            <h3 class="zdpjvzelk">Merci pour votre inscription !</h3>
-            <br></br>
-            <h2 class="zdpjvzelk">Nous vous renverrons un message de confirmation concernant votre inscription !</h2>
-            <br></br>
-            <p><a href="/bdsiutsn/index.html" style="color: #292c2f; ">Retour à l'Accueil</a></p>
+
+        <h1>Contact</h1>
+
+        <br></br>
+
+        <div class="presentation">
+            <h2>Président</h2>
+            <h3>Stéfan CORLAY :</h3>
+            <li style="text-indent: 25px;">
+                Numéro de téléphone : <a class="missions-suaps" href="tel:+330781510900" target=”_blank”>+330781510900</a>
+            </li>
+            <li style="text-indent: 25px;">
+                Addresse mail : <a class="missions-suaps" href="mailto:stefan.corlay@etu.univ-nantes.fr" target=”_blank”>stefan.corlay@etu.univ-nantes.fr</a>
+            </li>
         </div>
+
+        <br></br>
+
+        <div class="presentation">
+            <h2>Trésorier</h2>
+            <h3>Mahmoud HABIB :</h3>
+            <li style="text-indent: 25px;">
+                Numéro de téléphone : <a class="missions-suaps" href="tel:+330664629106" target=”_blank”>+330664629106</a>
+            </li>
+            <li style="text-indent: 25px;">
+                Addresse mail : <a class="missions-suaps" href="mailto:mahmoud.habib@etu.univ-nantes.fr" target=”_blank”>mahmoud.habib@etu.univ-nantes.fr</a>
+            </li>
         </div>
+
+        <br></br>
+        
+        <div class="presentation">
+            <h2>Secrétaire</h2>
+            <h3>Mailys GOURET :</h3>
+            <li style="text-indent: 25px;">
+                Numéro de téléphone : <a class="missions-suaps" href="tel:+330781510900" target=”_blank”>+330781510900</a>
+            </li>
+            <li style="text-indent: 25px;">
+                Addresse mail : <a class="missions-suaps" href="mailto:mailys.gouret@etu.univ-nantes.fr" target=”_blank”>mailys.gouret@etu.univ-nantes.fr</a>
+            </li>
+        </div>
+
+        <br></br>
     </main>
 
     <footer class="footer-distributed">
@@ -121,7 +159,7 @@
             <a href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”><i class="fa fa-envelope"></i></a>
             <a href="/bdsiutsn/social/instagram.html" target=”_blank”><i class="fa fa-instagram"></i></a>
             <a href="/bdsiutsn/social/linkedin.html" target=”_blank”><i class="fa fa-linkedin"></i></a>
-            </a>
+
         </div>
 
         <div class="footer-left">
