--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à venir</a>
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à
+                                            venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire aux évènements</a>
+                                        <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire
+                                            aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
@@ -89,7 +91,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -114,14 +116,14 @@
 
         <div class="presentation">
             <h2>Présentation</h2>
-            <h3> Le BDS favorise la pratique de nombreux sports sur le campus en organisant divers événements sportifs
-                comme
-                l'événement d'intégration de début d'année. L'association favorise la cohésion d'équipe et l'esprit de
-                groupe. Des valeurs qui s’appliquent aussi bien dans le cadre de la
-                compétition que dans sa vie professionnelle.
+            <h3>Le BDS favorise la pratique de nombreux sports sur le campus, grâce à l’entraide des BDS de
+                Saint-Nazaire, en organisant
+                divers événements sportifs comme l'événement la journée d'intégration du début d'année. L'association
+                favorise la cohésion d'équipe et l'esprit de groupe, des valeurs qui s’appliquent aussi bien dans le
+                cadre des la compétitions que dans sa vie professionnelle.
             </h3>
         </div>
-        
+
         <br></br>
 
         <div class="missions">
@@ -139,8 +141,13 @@
                 d'évènements
                 sportifs tout au long de l'année.
             </li>
+            <li style="text-indent: 25px;">
+                Le site va permettre au BDS d’impliquer plus facilement les étudiants à participer aux évènements
+                sportifs en renforçant le côté compétitif de celui-ci. La rubrique <a class="missions-suaps"
+                href="/bdsiutsn/classements/equipes.html"
+                target=”_blank”>Classement</a> sera utiliser pour suivre l’avancer de chaque équipe.
+            </li>
         </div>
-
 
         <!--<div class="instagram-widget">
             <div class="instagram-widget1">
