--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -97,7 +97,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="/bdsiutsn/etudiants.html">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
