--- a/etudiants.html
+++ b/etudiants.html
@@ -94,7 +94,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="#top">Etudiants</a></li>
+                        <li><a class="nav-link" href="/bdsiutsn/contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
