--- a/contact.html
+++ b/contact.html
@@ -110,48 +110,59 @@
 
     <main style="padding: 1.5rem; margin: 0 auto; max-width: 1100px">
 
-        <h1>Contact</h1>
+        <h1>Contactez nous !</h1>
 
         <br></br>
 
-        <div class="presentation">
-            <h2>Président</h2>
-            <h3>Stéfan CORLAY :</h3>
+        <div class="contact">
+            <h2>Président :</h2>
+            <h3>Stéfan CORLAY</h3>
             <li style="text-indent: 25px;">
                 Numéro de téléphone : <a class="missions-suaps" href="tel:+330781510900" target=”_blank”>+330781510900</a>
             </li>
             <li style="text-indent: 25px;">
-                Addresse mail : <a class="missions-suaps" href="mailto:stefan.corlay@etu.univ-nantes.fr" target=”_blank”>stefan.corlay@etu.univ-nantes.fr</a>
+                Adresse mail : <a class="missions-suaps" href="mailto:stefan.corlay@etu.univ-nantes.fr" target=”_blank”>stefan.corlay@etu.univ-nantes.fr</a>
             </li>
         </div>
 
         <br></br>
 
-        <div class="presentation">
-            <h2>Trésorier</h2>
-            <h3>Mahmoud HABIB :</h3>
+        <div class="">
+            <h2>Trésorier :</h2>
+            <h3>Mahmoud HABIB</h3>
             <li style="text-indent: 25px;">
                 Numéro de téléphone : <a class="missions-suaps" href="tel:+330664629106" target=”_blank”>+330664629106</a>
             </li>
             <li style="text-indent: 25px;">
-                Addresse mail : <a class="missions-suaps" href="mailto:mahmoud.habib@etu.univ-nantes.fr" target=”_blank”>mahmoud.habib@etu.univ-nantes.fr</a>
+                Adresse mail : <a class="missions-suaps" href="mailto:mahmoud.habib@etu.univ-nantes.fr" target=”_blank”>mahmoud.habib@etu.univ-nantes.fr</a>
             </li>
         </div>
 
         <br></br>
         
-        <div class="presentation">
-            <h2>Secrétaire</h2>
-            <h3>Mailys GOURET :</h3>
+        <div class="">
+            <h2>Secrétaire :</h2>
+            <h3>Mailys GOURET</h3>
             <li style="text-indent: 25px;">
                 Numéro de téléphone : <a class="missions-suaps" href="tel:+330768181228" target=”_blank”>+330768181228</a>
             </li>
             <li style="text-indent: 25px;">
-                Addresse mail : <a class="missions-suaps" href="mailto:mailys.gouret@etu.univ-nantes.fr" target=”_blank”>mailys.gouret@etu.univ-nantes.fr</a>
+                Adresse mail : <a class="missions-suaps" href="mailto:mailys.gouret@etu.univ-nantes.fr" target=”_blank”>mailys.gouret@etu.univ-nantes.fr</a>
             </li>
         </div>
 
         <br></br>
+
+        <div class="">
+            <h2>Contactez l'association :</h2>
+            <li style="text-indent: 25px;">
+                Adresse mail : <a class="missions-suaps" href="mailto:bds.iutsn.contact@gmail.com" target=”_blank”>bds.iutsn.contact@gmail.com</a>
+            </li>
+        </div>
+
+        <br></br>
+
+
     </main>
 
     <footer class="footer-distributed">
