--- a/classements/equipes.html
+++ b/classements/equipes.html
@@ -87,7 +87,7 @@
                             <div id="dropdown2" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#top">Classements des
+                                        <a class="dropdown-link" href="#">Classements des
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
