--- a/classements/promotion.html
+++ b/classements/promotion.html
@@ -81,7 +81,7 @@
                                             équipes</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#top">Classements des
+                                        <a class="dropdown-link" href="#">Classements des
                                             promotions</a>
                                     </li>
                                 </ul>
