--- a/evenements/actus.html
+++ b/evenements/actus.html
@@ -62,7 +62,7 @@
                             <div id="dropdown1" class="dropdown">
                                 <ul role="menu">
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#top">Evènements à venir</a>
+                                        <a class="dropdown-link" href="#">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
                                         <a class="dropdown-link" href="/bdsiutsn/evenements/inscription.html">S'inscrire
