--- a/evenements/inscription.html
+++ b/evenements/inscription.html
@@ -61,7 +61,7 @@
                                         <a class="dropdown-link" href="/bdsiutsn/evenements/actus.html">Evènements à venir</a>
                                     </li>
                                     <li role="menuitem">
-                                        <a class="dropdown-link" href="#top">S'inscrire aux évènements</a>
+                                        <a class="dropdown-link" href="#">S'inscrire aux évènements</a>
                                     </li>
                                 </ul>
                             </div>
