--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="nav-start">
                 <nav class="menu">
                     <ul class="menu-bar">
-                        <li><a class="nav-link" href="#top">Accueil</a></li>
+                        <li><a class="nav-link" href="#">Accueil</a></li>
                         <li>
                             <button class="nav-link dropdown-btn" data-dropdown="dropdown1" aria-haspopup="true"
                                 aria-expanded="false" aria-label="discover">
