--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li><a class="nav-link" href="#top">Contact</a></li>
+                        <li><a class="nav-link" href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
